(library
 (name libbinaryen_c)
 (public_name libbinaryen.c)
 (foreign_archives binaryen)
 (library_flags
  (:include ./config/library_flags.sexp))
 (c_library_flags :standard -lstdc++ -lpthread)
 (install_c_headers binaryen-c wasm-delegations))

(rule
 (targets libbinaryen.a binaryen-c.h wasm-delegations.h)
 (deps
  (source_tree binaryen))
 (action
  (no-infer
   (progn
    (run
     cmake
     -S
     binaryen
     -B
     archive_out
     -G
     "Unix Makefiles"
     -DBUILD_STATIC_LIB=ON
     -DCMAKE_BUILD_TYPE=Release
     -DCMAKE_INSTALL_PREFIX=archive_out/install)
    (run cmake --build archive_out --config Release)
    (run cmake --install archive_out --config Release)
    (copy archive_out/install/lib/libbinaryen.a libbinaryen.a)
    (copy archive_out/install/include/binaryen-c.h binaryen-c.h)
    (copy archive_out/install/include/wasm-delegations.h wasm-delegations.h)))))

(rule
 (target dllbinaryen.so)
 (deps
  (source_tree binaryen))
 (enabled_if
  (= %{system} macosx))
 (action
  (no-infer
   (progn
    (run
     cmake
     -S
     binaryen
     -B
     shared_out
     -G
     "Unix Makefiles"
     -DBUILD_STATIC_LIB=OFF
     -DCMAKE_BUILD_TYPE=Release
     -DCMAKE_INSTALL_PREFIX=shared_out/install)
    (run cmake --build shared_out --config Release)
    (run cmake --install shared_out --config Release)
    (copy shared_out/install/lib/libbinaryen.dylib dllbinaryen.so)))))

(rule
 (target dllbinaryen.so)
 (deps
  (source_tree binaryen))
 (enabled_if
  (= %{system} linux))
 (action
  (no-infer
   (progn
    (run
     cmake
     -S
     binaryen
     -B
     shared_out
     -G
     "Unix Makefiles"
     -DBUILD_STATIC_LIB=OFF
     -DCMAKE_BUILD_TYPE=Release
     -DCMAKE_INSTALL_PREFIX=shared_out/install)
    (run cmake --build shared_out --config Release)
    (run cmake --install shared_out --config Release)
    (copy shared_out/install/lib/libbinaryen.so dllbinaryen.so)))))

(rule
 (target dllbinaryen.dll)
 (deps
  (source_tree binaryen))
 (enabled_if
  (= %{system} mingw64))
 (action
  (no-infer
   (progn
    (run
     cmake
     -S
     binaryen
     -B
     shared_out
     -G
     "Unix Makefiles"
     -DBUILD_STATIC_LIB=OFF
     -DCMAKE_BUILD_TYPE=Release
     -DCMAKE_INSTALL_PREFIX=shared_out/install)
    (run cmake --build shared_out --config Release)
    (run cmake --install shared_out --config Release)
    (copy shared_out/install/bin/libbinaryen.dll dllbinaryen.dll)))))
