opam-version: "2.0"
version: "109.0.1"
synopsis: "Libbinaryen packaged for OCaml"
maintainer: "blaine@grain-lang.org"
author: "Blaine Bublitz"
license: "Apache-2.0"
homepage: "https://github.com/grain-lang/libbinaryen"
dev-repo: "git+https://github.com/grain-lang/libbinaryen.git"
bug-reports: "https://github.com/grain-lang/libbinaryen/issues"
build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "conf-cmake" {build}
  "dune" {>= "3.0.0"}
  "dune-configurator" {>= "3.0.0"}
  "js_of_ocaml-compiler" {with-test & >= "4.1.0" < "5.0.0"}
  "ocaml" {>= "4.12"}
]
depexts: [
  ["gcc-g++"] { os-distribution = "cygwinports" }
]
pin-depends: [
  ["js_of_ocaml-compiler.4.1.0" "git+https://github.com/ocsigen/js_of_ocaml#4.1.0"]
]
