opam-version: "2.0"
version: "111.0.0"
synopsis: "Libbinaryen packaged for OCaml"
maintainer: "blaine@grain-lang.org"
author: "Blaine Bublitz"
license: "Apache-2.0"
homepage: "https://github.com/grain-lang/libbinaryen"
dev-repo: "git+https://github.com/grain-lang/libbinaryen.git"
bug-reports: "https://github.com/grain-lang/libbinaryen/issues"
build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "conf-cmake" {build}
  "dune" {>= "3.0.0"}
  "dune-configurator" {>= "3.0.0"}
  "js_of_ocaml-compiler" {with-test & >= "4.1.0" < "6.0.0"}
  "ocaml" {>= "4.12"}
]
depexts: [
  ["gcc-g++"] { os-distribution = "cygwinports" }
]
pin-depends: [
  ["js_of_ocaml-compiler.5.1.2" "git+https://github.com/ocsigen/js_of_ocaml#880e44f8971d66de9a67f90944a7a27443cbf9bf"]
]
