(library
 (name binaryen)
 (libraries libbinaryen_c)
 (modules types)
 (foreign_stubs
  (language c)
  (names binaryen_stubs_types)
  (flags :standard -O2 -Wall -Wextra))
 (js_of_ocaml
  (javascript_files types.js)))

(tests
 (names test)
 (enabled_if
  (= {bin-available:node} true))
 (modules test)
 (libraries binaryen)
 (modes exe js)
 (flags
  :standard
  (:include ./config/flags.sexp))
 (js_of_ocaml
  (flags --no-sourcemap)))

(tests
 (names test)
 (enabled_if
  (= {bin-available:node} false))
 (modules test)
 (libraries binaryen)
 (modes exe)
 (flags
  :standard
  (:include ./config/flags.sexp)))
